@@ -1,3 +1,8 @@
+2002-08-01  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclExecute.c: added a reference count for the complete
+	execution stack, instead of Tcl_Preserve/Tcl_Release.
+
 2002-08-01  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* generic/tclCkalloc.c (TclFinalizeMemorySubsystem):
